--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1942,11 +1942,11 @@
    "source": [
     "# Northern Hemisphere\n",
     "x_axis = northern_hemi_df['Lat']\n",
-    "y_axis = northern_hemi_df['Wind Speed']\n",
-    "plt.title('Northern Hemisphere Latitude vs. Wind Speed (10-24-24)')\n",
+    "y_axis = northern_hemi_df['Cloudiness']\n",
+    "plt.title('Northern Hemisphere Latitude vs. Cloudiness (10-24-24)')\n",
     "plt.scatter(x_axis, y_axis)\n",
     "plt.xlabel('Lat')\n",
-    "plt.ylabel('Wind Speed')\n",
+    "plt.ylabel('Cloudiness')\n",
     "plt.grid()\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_axis, y_axis)\n",
     "regress_values = x_axis * slope + intercept\n",
@@ -2149,7 +2149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
